--- a/framework/webapp/config/url.properties
+++ b/framework/webapp/config/url.properties
@@ -27,7 +27,7 @@ http.request-map.list=SOAPService,viewShipmentLabel
 # HTTPS Port (Secure port)
 port.https.enabled=Y
 # empty by default see OFBIZ-9206
-port.https=
+#port.https=
 force.https.host=
 
 # HTTP Port (Not Secure port)
