--- a/framework/base/config/debug.properties
+++ b/framework/base/config/debug.properties
@@ -32,6 +32,8 @@ print.fatal=true
 
 ## Root log location to display on webtools https://localhost:8443/webtools/control/LogView
 # log4j.appender.css.dir=runtime/logs/
+log4j2.logger.catalina.name = org.apache.catalina
+log4j2.logger.catalina.level = DEBUG
 ## File to display on webtools https://localhost:8443/webtools/control/LogView
 # log4j.appender.css.defaultFile=ofbiz.log
 ## RegExp use to filter file available on dropdown selection to diplay log on https://localhost:8443/webtools/control/FetchLog
