--- a/framework/webapp/config/url.properties
+++ b/framework/webapp/config/url.properties
@@ -21,13 +21,13 @@
 ####
 
 # If you want to use HTTP then set no.http=N. Else all requests will use HTTPS (also enforced by a HSTS header) except if put in the http.request-map.list  
-no.http=Y
+no.http=N
 http.request-map.list=SOAPService,viewShipmentLabel
 
 # HTTPS Port (Secure port)
-port.https.enabled=Y
+port.https.enabled=N
 # empty by default see OFBIZ-9206
-#port.https=
+port.https=
 force.https.host=
 
 # HTTP Port (Not Secure port)
@@ -43,5 +43,5 @@ content.url.prefix.standard=
 cookie.domain=
 
 # Custom HTTPS Configuration for FTM Development
-port.https=8443
-port.https.enabled=Y
+#port.https=8443
+#port.https.enabled=Y
